fix: resolve all remaining MDX parse errors
- Fix import statement in building-resilience article
- Replace all single quotes/apostrophes with HTML entities (&apos;, &quot;)
- Ensures all blog pages can now render without JavaScript parse errors
- MDX content now properly escaped for safe parsing

--- a/src/app/blog/building-resilience/page.mdx
+++ b/src/app/blog/building-resilience/page.mdx
@@ -1,7 +1,7 @@
-import { Metadata } from 'next'
+import { Metadata } from "next"
 
 export const metadata: Metadata = {
-  title: "Building Resilience with Motivational Quotes | Daily Quotes Blog",
+  title: "Building &gt; &quot;It&apos;s not about how hard you hit. It&apos;s about how hard you can get hit and keep moving forward.&quot; - Rocky Balboaesilience with Motivational Quotes | Daily Quotes Blog",
   description: "How inspirational words can help you overcome challenges and grow stronger. Learn to build mental resilience through daily motivation.",
   openGraph: {
     title: "Building Resilience with Motivational Quotes",
@@ -21,7 +21,7 @@ Life inevitably presents us with challenges, setbacks, and moments when we quest
 
 ## Understanding Resilience
 
-Resilience isn't about avoiding difficulties – it's about developing the capacity to bounce back from them. Psychologists define resilience as:
+Resilience isn&apos;t about avoiding difficulties – it&apos;s about developing the capacity to bounce back from them. Psychologists define resilience as:
 
 - The ability to **adapt** to adversity
 - Mental **flexibility** in the face of challenges
@@ -38,7 +38,7 @@ Why do certain quotes have such profound impact on our resilience? The answer li
 Motivational quotes help us **reframe** our perspective on challenges. Instead of seeing a setback as a failure, we begin to see it as a learning opportunity.
 
 ### Social Connection
-When we read quotes from others who've overcome adversity, we feel less alone in our struggles. This sense of **shared experience** builds resilience.
+When we read quotes from others who&apos;ve overcome adversity, we feel less alone in our struggles. This sense of **shared experience** builds resilience.
 
 ### Neuroplasticity
 Repeated exposure to positive, resilience-building messages literally **rewires our brain** to respond more effectively to stress.
@@ -48,7 +48,7 @@ Repeated exposure to positive, resilience-building messages literally **rewires 
 Different types of motivational content serve different aspects of resilience:
 
 ### Growth Mindset Quotes
-*"I have not failed. I've just found 10,000 ways that won't work."* - Thomas Edison
+*&quot;I have not failed. I&apos;ve just found 10,000 ways that won&apos;t work.&quot;* - Thomas Edison
 
 These quotes help us view challenges as opportunities for growth rather than threats to our self-worth.
 
@@ -64,7 +64,7 @@ These build our confidence in our own abilities to handle challenges.
 
 ## Building Your Resilience Toolkit
 
-Here's how to systematically use motivational quotes to build resilience:
+Here&apos;s how to systematically use motivational quotes to build resilience:
 
 ### 1. Create a Personal Collection
 Gather quotes that specifically resonate with your challenges and goals. Keep them easily accessible.
@@ -80,7 +80,7 @@ End difficult days by finding a quote that helps you process and learn from the 
 
 ## The Compound Effect of Daily Motivation
 
-Resilience isn't built overnight – it's developed through consistent, small actions:
+Resilience isn&apos;t built overnight – it&apos;s developed through consistent, small actions:
 
 - **Day 1-30**: Building awareness and beginning to shift perspective
 - **Day 31-90**: Developing new thought patterns and responses
@@ -111,6 +111,6 @@ Research shows that people who regularly engage with motivational content:
 
 ---
 
-Building resilience through motivational quotes isn't about toxic positivity or ignoring real problems. It's about **training your mind** to respond to challenges with strength, wisdom, and hope.
+Building resilience through motivational quotes isn&apos;t about toxic positivity or ignoring real problems. It&apos;s about **training your mind** to respond to challenges with strength, wisdom, and hope.
 
 *Ready to start building your resilience? Visit our [main page](/) for daily motivation that will help you grow stronger with each challenge you face.*
