fix: resolve MDX parse errors with template literals
- Use template literals (backticks) instead of quotes in metadata
- Revert HTML entities back to normal characters in content
- Fix corrupted title in building-resilience article
- Template literals avoid JavaScript parsing issues with quotes/apostrophes

--- a/src/app/blog/mindfulness-through-wisdom/page.mdx
+++ b/src/app/blog/mindfulness-through-wisdom/page.mdx
@@ -1,11 +1,11 @@
 import { Metadata } from "next"
 
 export const metadata: Metadata = {
-  title: "Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog",
-  description: "Exploring timeless quotes that bring peace and clarity to modern life. Ancient wisdom for contemporary mindfulness practice.",
+  title: `Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog`,
+  description: `Exploring timeless quotes that bring peace and clarity to modern life. Ancient wisdom for contemporary mindfulness practice.`,
   openGraph: {
-    title: "Finding Mindfulness Through Ancient Wisdom",
-    description: "Exploring timeless quotes that bring peace and clarity to modern life",
+    title: `Finding Mindfulness Through Ancient Wisdom`,
+    description: `Exploring timeless quotes that bring peace and clarity to modern life`,
     type: "article",
     publishedTime: "2024-12-20T00:00:00.000Z",
   },
@@ -21,7 +21,7 @@ In an age of constant connectivity and digital overwhelm, the **ancient practice
 
 ## The Timeless Nature of Wisdom
 
-Ancient philosophers, spiritual teachers, and wise minds from across cultures have left us precious gems of insight. These aren&apos;t just pretty words – they&apos;re **practical tools** for navigating life&apos;s complexities.
+Ancient philosophers, spiritual teachers, and wise minds from across cultures have left us precious gems of insight. These aren't just pretty words – they're **practical tools** for navigating life's complexities.
 
 > "Peace comes from within. Do not seek it without." - Buddha
 
@@ -73,7 +73,7 @@ These simple phrases contain entire philosophies, entire ways of living.
 
 ## Creating Your Personal Practice
 
-Building a mindfulness practice through ancient wisdom doesn&apos;t require:
+Building a mindfulness practice through ancient wisdom doesn't require:
 - Expensive courses
 - Complex techniques
 - Hours of meditation
