fix: replace template literals with double quotes in MDX metadata
- Change backticks to double quotes in all metadata fields
- MDX parser has issues with template literals in metadata exports
- Keep content as normal text without escaping
- Resolves JavaScript parsing errors in SWC

--- a/src/app/blog/mindfulness-through-wisdom/page.mdx
+++ b/src/app/blog/mindfulness-through-wisdom/page.mdx
@@ -1,11 +1,11 @@
 import { Metadata } from "next"
 
 export const metadata: Metadata = {
-  title: `Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog`,
-  description: `Exploring timeless quotes that bring peace and clarity to modern life. Ancient wisdom for contemporary mindfulness practice.`,
+  title: "Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog",
+  description: "Exploring timeless quotes that bring peace and clarity to modern life. Ancient wisdom for contemporary mindfulness practice.",
   openGraph: {
-    title: `Finding Mindfulness Through Ancient Wisdom`,
-    description: `Exploring timeless quotes that bring peace and clarity to modern life`,
+    title: "Finding Mindfulness Through Ancient Wisdom",
+    description: "Exploring timeless quotes that bring peace and clarity to modern life",
     type: "article",
     publishedTime: "2024-12-20T00:00:00.000Z",
   },
