--- a/src/app/blog/power-of-daily-inspiration/page.mdx
+++ b/src/app/blog/power-of-daily-inspiration/page.mdx
@@ -2,10 +2,10 @@ import { Metadata } from "next"
 
 export const metadata: Metadata = {
   title: "The Power of Daily Inspiration | Daily Quotes Blog",
-  description: `How a simple daily quote can transform your mindset and boost productivity. Discover the science behind inspirational content.`,
+  description: "How a simple daily quote can transform your mindset and boost productivity. Discover the science behind inspirational content.",
   openGraph: {
     title: "The Power of Daily Inspiration",
-    description: `How a simple daily quote can transform your mindset and boost productivity`,
+    description: "How a simple daily quote can transform your mindset and boost productivity",
     type: "article",
     publishedTime: "2024-12-25T00:00:00.000Z",
   },
