fix: use compact single-line format for MDX metadata
- Convert multiline metadata object to a single line
- Resolves SWC parsing issues with multiline object structures
- Final fix for MDX compatibility

--- a/src/app/blog/mindfulness-through-wisdom/page.mdx
+++ b/src/app/blog/mindfulness-through-wisdom/page.mdx
@@ -1,9 +1,6 @@
 import { Metadata } from "next"
 
-export const metadata: Metadata = {
-  title: "Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog",
-  description: "Exploring timeless quotes that bring peace and clarity to modern life. Ancient wisdom for contemporary mindfulness practice.",
-}
+export const metadata: Metadata = { title: "Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog", description: "Exploring timeless quotes that bring peace and clarity to modern life. Ancient wisdom for contemporary mindfulness practice." }
 
 # Finding Mindfulness Through Ancient Wisdom
 
