--- a/src/app/blog/power-of-daily-inspiration/page.mdx
+++ b/src/app/blog/power-of-daily-inspiration/page.mdx
@@ -1,9 +1,6 @@
 import { Metadata } from "next"
 
-export const metadata: Metadata = {
-  title: "The Power of Daily Inspiration | Daily Quotes Blog",
-  description: "How a simple daily quote can transform your mindset and boost productivity. Discover the science behind inspirational content.",
-}
+export const metadata: Metadata = { title: "The Power of Daily Inspiration | Daily Quotes Blog", description: "How a simple daily quote can transform your mindset and boost productivity. Discover the science behind inspirational content." }
 
 # The Power of Daily Inspiration
 
