Fix MDX parse errors by removing Metadata type annotations

--- a/src/app/blog/building-resilience/page.mdx
+++ b/src/app/blog/building-resilience/page.mdx
@@ -1,6 +1,6 @@
 import { Metadata } from "next"
 
-export const metadata: Metadata = { title: "Building Resilience with Motivational Quotes | Daily Quotes Blog", description: "How inspirational words can help you overcome challenges and grow stronger. Learn to build mental resilience through daily motivation." }
+export const metadata = { title: "Building Resilience with Motivational Quotes | Daily Quotes Blog", description: "How inspirational words can help you overcome challenges and grow stronger." };
 
 # Building Resilience with Motivational Quotes
 
