--- a/src/app/blog/mindfulness-through-wisdom/page.mdx
+++ b/src/app/blog/mindfulness-through-wisdom/page.mdx
@@ -1,6 +1,4 @@
-import { Metadata } from "next"
-
-export const metadata: Metadata = { title: "Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog", description: "Exploring timeless quotes that bring peace and clarity to modern life. Ancient wisdom for contemporary mindfulness practice." }
+export const metadata = { title: "Finding Mindfulness Through Ancient Wisdom | Daily Quotes Blog", description: "Exploring timeless quotes that bring peace and clarity to modern life." };
 
 # Finding Mindfulness Through Ancient Wisdom
 
